tests/baselines/reference/functionWithSameNameAsField.errors.txt
tests/cases/compiler/functionWithSameNameAsField.ts(2,12): error TS2300: Duplicate identifier 'total'.
tests/cases/compiler/functionWithSameNameAsField.ts(3,12): error TS2300: Duplicate identifier 'total'.


==== tests/cases/compiler/functionWithSameNameAsField.ts (2 errors) ====
    class TestProgressBar {
        public total: number;
               ~~~~~
!!! error TS2300: Duplicate identifier 'total'.
        public total(total: number) {
               ~~~~~
!!! error TS2300: Duplicate identifier 'total'.
            this.total = total;
            return this;
        }
    }
    